--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -656,7 +656,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "lam = 20.\n",
+    "e = m/2\n",
+    "ny = np.linalg.norm(y)\n",
+    "i = np.argmax(abs(sol))\n",
+    "problem                                     = classo_problem(X,y,C)\n",
+    "problem.formulation.huber                   = False\n",
+    "problem.formulation.concomitant             = True\n",
+    "\n",
+    "problem.model_selection.CV                  = False\n",
+    "problem.model_selection.LAMfixed            = False\n",
+    "problem.model_selection.PATH                = True\n",
+    "problem.model_selection.StabSel             = False\n",
+    "\n",
+    "problem.model_selection.LAMfixedparameters.rescaled_lam = False\n",
+    "problem.model_selection.LAMfixedparameters.lam = lam\n",
+    "\n",
+    "problem.model_selection.PATHparameters.numerical_method = 'DR'\n",
+    "problem.solve()\n",
+    "print(problem.solution.PATH)\n",
+    "betas= problem.solution.PATH.BETAS\n",
+    "lambdas= problem.solution.PATH.LAMBDAS\n",
+    "\n",
+    "problem.model_selection.LAMfixed            = True\n",
+    "problem.model_selection.PATH                = False\n",
+    "\n",
+    "i = 20\n",
+    "\n",
+    "beta1 = betas[i]\n",
+    "lambda1 = lambdas[i]\n",
+    "problem.model_selection.LAMfixedparameters.lam = lambda1\n",
+    "problem.solve\n",
+    "beta2 = problem.solution.LAMfixed.beta\n",
+    "\n",
+    "for beta in [beta1,beta2,beta1-beta2]:\n",
+    "    plt.bar(range(len(beta)),beta)\n",
+    "    plt.show()\n",
+    "    \n",
+    "BETA, LAMBDA = pathlasso((X,C,y),lambdas=np.linspace(1.,1e-2,100),typ='R3',meth='DR', true_lam = False, e=m/2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "problem                                     = classo_problem(X,y,C)                           \n",
+    "problem.model_selection.LAMfixed            = False\n",
+    "problem.model_selection.PATH                = True\n",
+    "problem.model_selection.StabSel             = False\n",
+    "\n",
+    "problem.model_selection.LAMfixedparameters.rescaled_lam = False\n",
+    "problem.model_selection.LAMfixedparameters.lam = 50\n",
+    "\n",
+    "problem.model_selection.PATHparameters.numerical_method = 'DR'\n",
+    "problem.solve()\n",
+    "print(problem.solution.PATH)\n",
+    "\n",
+    "problem.model_selection.PATHparameters.numerical_method = 'Path-Alg'\n",
+    "problem.solve()\n",
+    "print(problem.solution.PATH)\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
