--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -160,7 +160,6 @@ journal = {Neural computation},
 doi = {10.1162/NECO_a_00434}
 }
 
-
 @article{Lin:2014,
 author = {Lin, Wei and Shi, Pixu and Feng, Rui and Li, Hongzhe},
 doi = {10.1093/biomet/asu031},
@@ -195,7 +194,7 @@ archivePrefix = {arXiv},
 arxivId = {1909.04990},
 author = {Mishra, Aditya and M\"uller, Christian L.},
 eprint = {1909.04990},
-title = {{Robust Regression with Compositional Covariates}},
+title = {{Robust regression with compositional covariates}},
 url = {http://arxiv.org/abs/1909.04990},
 year = {2019}
 }
