--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -49,7 +49,7 @@ year = {2020}
   author = {Combettes, Patrick L. and Pesquet, Jean-Christophe},
   year = {2012},
   month = {06},
-  pages = {1-24},
+  pages = {307--320},
   title = {Primal-Dual Splitting Algorithm for Solving Inclusions with Mixtures of Composite, Lipschitzian, and Parallel-Sum Type Monotone Operators},
   volume = {20},
   journal = {Set-Valued and Variational Analysis},
