correct code style in the examples

--- a/examples/Synthetic data/Synthetic data Notebook.ipynb
+++ b/examples/Synthetic data/Synthetic data Notebook.ipynb
@@ -34,14 +34,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Basic example"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The c-lasso package includes\n",
     "the routine ```random_data``` that allows you to generate problem instances using normally distributed data."
@@ -54,7 +58,8 @@
     "ExecuteTime": {
      "end_time": "2020-11-18T17:09:07.100179Z",
      "start_time": "2020-11-18T17:09:07.070849Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -69,16 +74,18 @@
     }
    ],
    "source": [
-    "m,d,d_nonzero,k,sigma =100,200,5,1,0.5\n",
-    "(X,C,y),sol = random_data(m,d,d_nonzero,k,sigma,zerosum=True,seed=1)\n",
+    "m, d, d_nonzero, k, sigma = 100, 200, 5, 1, 0.5\n",
+    "(X, C, y), sol = random_data(m, d, d_nonzero, k, sigma, zerosum = True,seed = 1)\n",
     "np.nonzero(sol)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "This code snippet generates a problem instance with sparse β in dimension d=100 (sparsity d_nonzero=5). The design matrix X comprises n=100 samples generated from an i.i.d standard normal distribution. The dimension of the constraint matrix C is d x k matrix. The noise level is σ=0.5. The input zerosum=True implies that C is the all-ones vector and Cβ=0. The n-dimensional outcome vector y and the regression vector β is then generated to satisfy the given constraints.\n",
+    "This code snippet generates a problem instance with sparse β in dimension d = 100 (sparsity d_nonzero = 5). The design matrix X comprises n = 100 samples generated from an i.i.d standard normal distribution. The dimension of the constraint matrix C is d x k matrix. The noise level is σ = 0.5. The input zerosum = True implies that C is the all-ones vector and Cβ = 0. The n-dimensional outcome vector y and the regression vector β is then generated to satisfy the given constraints.\n",
     "\n",
     "Next we can define a default c-lasso problem instance with the generated data:"
    ]
@@ -90,16 +97,19 @@
     "ExecuteTime": {
      "end_time": "2020-11-18T17:09:07.120961Z",
      "start_time": "2020-11-18T17:09:07.112560Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "problem = classo_problem(X,y)"
+    "problem = classo_problem(X, y)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "You can look at the generated problem instance by typing:"
    ]
@@ -111,7 +121,8 @@
     "ExecuteTime": {
      "end_time": "2020-11-18T17:09:07.131501Z",
      "start_time": "2020-11-18T17:09:07.125632Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -145,6 +156,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "source": [
@@ -159,6 +171,7 @@
      "end_time": "2020-11-18T17:09:08.546265Z",
      "start_time": "2020-11-18T17:09:07.134574Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -168,7 +181,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "One can add this code snippet to specify the location to save the figures"
    ]
@@ -180,7 +195,8 @@
     "ExecuteTime": {
      "end_time": "2020-11-18T17:09:08.557386Z",
      "start_time": "2020-11-18T17:09:08.549025Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -190,7 +206,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "After completion, the results of the optimization and model selection routines \n",
     "can be visualized.\n",
@@ -205,7 +223,8 @@
     "ExecuteTime": {
      "end_time": "2020-11-18T17:09:09.771551Z",
      "start_time": "2020-11-18T17:09:08.565601Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -279,9 +298,9 @@
    },
    "outputs": [],
    "source": [
-    "m,d,d_nonzero,k,sigma =100,200,5,0,0.5\n",
-    "(X,C,y),sol = random_data(m,d,d_nonzero,k,sigma,zerosum=True,seed=4)\n",
-    "problem                                     = classo_problem(X,y,C)\n",
+    "m,  d,  d_nonzero,  k, sigma = 100, 200, 5, 0, 0.5\n",
+    "(X, C, y), sol = random_data(m, d, d_nonzero, k, sigma, zerosum = True, seed = 4)\n",
+    "problem                                     = classo_problem(X, y, C)\n",
     "problem.formulation.huber                   = True\n",
     "problem.formulation.concomitant             = False\n",
     "problem.model_selection.CV                  = True\n",
