--- a/examples/Synthetic data/Testing parameters.ipynb
+++ b/examples/Synthetic data/Testing parameters.ipynb
@@ -61,12 +61,12 @@
     }
    ],
    "source": [
-    "m,d,d_nonzero,k,sigma =150,100,5,1,0.5\n",
-    "(X,C,y),sol = random_data(m,d,d_nonzero,k,sigma,zerosum=True,seed=0)\n",
-    "plt.bar(range(len(sol)),sol)\n",
+    "m, d, d_nonzero, k, sigma = 150, 100, 5, 1, 0.5\n",
+    "(X, C, y), sol = random_data(m, d, d_nonzero, k, sigma, zerosum = True, seed = 0)\n",
+    "plt.bar(range(len(sol)), sol)\n",
     "plt.show()\n",
     "\n",
-    "np.arange(len(sol))[sol !=0.]"
+    "np.arange(len(sol))[sol != 0.]"
    ]
   },
   {
@@ -109,7 +109,7 @@
    },
    "outputs": [],
    "source": [
-    "problem = classo_problem(X,y+0.5,C=C)\n",
+    "problem = classo_problem(X, y+0.5, C= C)\n",
     "problem.model_selection.PATH = True\n",
     "problem.model_selection.CV = True\n",
     "problem.model_selection.StabSel = True\n",
@@ -211,7 +211,7 @@
     "param = problem1.model_selection.PATHparameters\n",
     "param.numerical_method = ' '\n",
     "param.n_active = 20\n",
-    "param.lambdas = np.linspace(1.,1e-3,50)"
+    "param.lambdas = np.linspace(1., 1e-3, 50)"
    ]
   },
   {
@@ -228,7 +228,7 @@
     "param = problem2.model_selection.PATHparameters\n",
     "param.numerical_method = 'P-PDS'\n",
     "param.n_active = 0\n",
-    "param.lambdas = np.linspace(1.,1e-1,50)"
+    "param.lambdas = np.linspace(1., 1e-1, 50)"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "param = problem3.model_selection.PATHparameters\n",
     "param.numerical_method = 'DR'\n",
     "param.n_active = 0\n",
-    "param.lambdas = np.linspace(1.,1e-1,20)"
+    "param.lambdas = np.linspace(1., 1e-1, 20)"
    ]
   },
   {
@@ -271,7 +271,7 @@
     "param.numerical_method = ' '\n",
     "param.Nsubset = 5\n",
     "param.oneSE = True\n",
-    "param.lambdas = np.linspace(1.,1e-3,80)"
+    "param.lambdas = np.linspace(1., 1e-3, 80)"
    ]
   },
   {
@@ -290,7 +290,7 @@
     "param.numerical_method = ' '\n",
     "param.Nsubset = 7\n",
     "param.oneSE = False\n",
-    "param.lambdas = np.linspace(1.,1e-3,80)"
+    "param.lambdas = np.linspace(1., 1e-3, 80)"
    ]
   },
   {
@@ -309,7 +309,7 @@
     "param.numerical_method = 'P-PDS'\n",
     "param.Nsubset = 3\n",
     "param.oneSE = True\n",
-    "param.lambdas = np.linspace(1.,1e-1,20)"
+    "param.lambdas = np.linspace(1., 1e-1, 20)"
    ]
   },
   {
@@ -829,7 +829,7 @@
     "problem1.solve()\n",
     "print(problem1)\n",
     "print(problem1.solution)\n",
-    "# plt.plot(problem1.solution.PATH.LAMBDAS,problem1.solution.PATH.BETAS[:,0])\n",
+    "# plt.plot(problem1.solution.PATH.LAMBDAS, problem1.solution.PATH.BETAS[:, 0])\n",
     "# plt.show()\n",
     "\n",
     "problem2.solve()\n",
