--- a/docs/source/auto_examples/plot_basic_example.ipynb
+++ b/docs/source/auto_examples/plot_basic_example.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Basic example\n\nLet's present what classo does when using its default parameters on synthetic data\n"
+        "\n# Basic example\n\nLet's present what classo does when using its default parameters on synthetic data.\n"
       ]
     },
     {
@@ -45,6 +45,24 @@
       "outputs": [],
       "source": [
         "m, d, d_nonzero, k, sigma = 100, 200, 5, 1, 0.5\n(X, C, y), sol = random_data(m, d, d_nonzero, k, sigma, zerosum=True, seed=1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Remark : one can see the parameters that should be selected :\n\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "print(np.nonzero(sol))"
       ]
     },
     {
