--- a/docs/source/auto_examples/plot_advanced_example.ipynb
+++ b/docs/source/auto_examples/plot_advanced_example.ipynb
@@ -33,7 +33,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generate the data\nThis code snippet generates a problem instance with sparse \u00df in dimension\nd=100 (sparsity d_nonzero=5). The design matrix X comprises n=100 samples generated from an i.i.d standard normal\ndistribution. The dimension of the constraint matrix C is d x k matrix. The noise level is \u03c3=0.5. \nThe input `zerosum=True` implies that C is the all-ones vector and C\u00df=0. The n-dimensional outcome vector y\nand the regression vector \u00df is then generated to satisfy the given constraints. \n\n"
+        "## Generate the data\n\nThis code snippet generates a problem instance with sparse \u00df in dimension\nd=100 (sparsity d_nonzero=5). The design matrix X comprises n=100 samples generated from an i.i.d standard normal\ndistribution. The dimension of the constraint matrix C is d x k matrix. The noise level is \u03c3=0.5. \nThe input `zerosum=True` implies that C is the all-ones vector and C\u00df=0. The n-dimensional outcome vector y\nand the regression vector \u00df is then generated to satisfy the given constraints. \nOne can then see the parameters that should be selected.\n\n"
       ]
     },
     {
@@ -44,32 +44,14 @@
       },
       "outputs": [],
       "source": [
-        "m, d, d_nonzero, k, sigma = 100, 200, 5, 1, 0.5\n(X, C, y), sol = random_data(m, d, d_nonzero, k, sigma, zerosum=True, seed=1)"
+        "m, d, d_nonzero, k, sigma = 100, 200, 5, 1, 0.5\n(X, C, y), sol = random_data(m, d, d_nonzero, k, sigma, zerosum=True, seed=1)\nprint(np.nonzero(sol))"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Remark : one can see the parameters that should be selected :\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "print(np.nonzero(sol))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Define the classo instance\nNext we can define a default c-lasso problem instance with the generated data:\n\n"
+        "## Define the classo instance\n\nNext we can define a default c-lasso problem instance with the generated data:\n\n"
       ]
     },
     {
@@ -87,7 +69,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Change the parameters\nLet's see some example of change in the parameters\n\n"
+        "## Change the parameters\n\nLet's see some example of change in the parameters\n\n"
       ]
     },
     {
@@ -105,7 +87,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Check parameters\nYou can look at the generated problem instance by typing:\n\n"
+        "## Check parameters\n\nYou can look at the generated problem instance by typing:\n\n"
       ]
     },
     {
@@ -123,7 +105,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Solve optimization problems\n We only use stability selection as default model selection strategy. \nThe command also allows you to inspect the computed stability profile for all variables \nat the theoretical \u03bb\n\n"
+        "## Solve optimization problems\n\n We only use stability selection as default model selection strategy. \nThe command also allows you to inspect the computed stability profile for all variables \nat the theoretical \u03bb\n\n"
       ]
     },
     {
@@ -141,7 +123,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Visualisation\nAfter completion, the results of the optimization and model selection routines \ncan be visualized using\n\n"
+        "## Visualisation\n\nAfter completion, the results of the optimization and model selection routines \ncan be visualized using\n\n"
       ]
     },
     {
