add trac example

--- a/examples/example-notebook.ipynb
+++ b/examples/example-notebook.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-09T22:24:28.558822Z",
-     "start_time": "2020-12-09T22:24:26.410006Z"
+     "end_time": "2020-12-14T14:32:44.890421Z",
+     "start_time": "2020-12-14T14:32:42.007678Z"
     },
     "run_control": {
      "marked": true
@@ -25,14 +25,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Combo data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Combettes, P. L. and Müller, C. L. (2020). Regression models for compositional data: Gen- eral log-contrast formulations, proximal optimization, and microbiome data applications. Statistics in Biosciences, pages 1–26.:\n",
     "\n",
@@ -41,7 +45,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Building matrices "
    ]
@@ -53,7 +59,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:24:28.614971Z",
      "start_time": "2020-12-09T22:24:28.561316Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -91,7 +98,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Create classo instance and change parameters "
@@ -120,7 +128,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## R1"
@@ -255,7 +264,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## R2"
@@ -390,7 +400,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## R3"
@@ -539,7 +550,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## R4"
    ]
@@ -552,6 +565,7 @@
      "end_time": "2020-12-09T22:32:28.794630Z",
      "start_time": "2020-12-09T22:24:37.550977Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -975,11 +989,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-09T22:32:31.902181Z",
-     "start_time": "2020-12-09T22:32:31.888822Z"
+     "end_time": "2020-12-14T14:32:45.982528Z",
+     "start_time": "2020-12-14T14:32:45.964378Z"
     }
    },
    "outputs": [
@@ -989,7 +1003,7 @@
        "(88, 116)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1011,7 @@
    "source": [
     "path = path_figure + 'examplepH/'\n",
     "pH = sio.loadmat('pH_data/pHData.mat')\n",
-    "tax = sio.loadmat('pH_data/taxTablepHData.mat')['None'][0]\n",
+    "tax = sio.loadmat('pH_data/taxTablepHData.mat')\n",
     "\n",
     "X, Y_uncent = pH['X'], pH['Y'].T[0]\n",
     "y = Y_uncent - np.mean(Y_uncent) # Center Y\n",
@@ -1584,14 +1598,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Tara data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Bien, J., Yan, X., Simpson, L. and Müller, C. (2020). Tree-Aggregated Predictive Modeling of Microbiome Data : \n",
     "\n",
@@ -1600,14 +1618,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Building matrices "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "###  importing data"
    ]
@@ -1619,7 +1642,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:46.672133Z",
      "start_time": "2020-12-09T22:32:46.665941Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1634,7 +1658,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:47.260320Z",
      "start_time": "2020-12-09T22:32:46.677899Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1656,6 +1681,7 @@
      "end_time": "2020-12-09T22:32:47.267717Z",
      "start_time": "2020-12-09T22:32:47.263353Z"
     },
+    "hidden": true,
     "run_control": {
      "marked": false
     },
@@ -1671,7 +1697,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Open R file tara_sal_processed.RDS"
    ]
@@ -1684,6 +1712,7 @@
      "end_time": "2020-12-09T22:32:47.420419Z",
      "start_time": "2020-12-09T22:32:47.271035Z"
     },
+    "hidden": true,
     "run_control": {
      "marked": false
     }
@@ -1702,6 +1731,7 @@
      "end_time": "2020-12-09T22:32:50.921065Z",
      "start_time": "2020-12-09T22:32:47.422756Z"
     },
+    "hidden": true,
     "run_control": {
      "marked": false
     }
@@ -1731,6 +1761,7 @@
      "end_time": "2020-12-09T22:32:51.011293Z",
      "start_time": "2020-12-09T22:32:50.923801Z"
     },
+    "hidden": true,
     "run_control": {
      "marked": false
     }
@@ -1762,7 +1793,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-15T19:42:31.664160Z",
      "start_time": "2020-10-15T19:42:31.640873Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "### process similar to 2fit_trac_model.R"
@@ -1775,7 +1807,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:51.603252Z",
      "start_time": "2020-12-09T22:32:51.014321Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1842,7 +1875,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:51.694183Z",
      "start_time": "2020-12-09T22:32:51.606814Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1858,7 +1892,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:51.708423Z",
      "start_time": "2020-12-09T22:32:51.697083Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1905,7 +1940,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:51.736042Z",
      "start_time": "2020-12-09T22:32:51.716993Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1920,7 +1956,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:51.765414Z",
      "start_time": "2020-12-09T22:32:51.745697Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1940,7 +1977,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### process similar to trac "
    ]
@@ -1952,7 +1991,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:52.939894Z",
      "start_time": "2020-12-09T22:32:51.780432Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1964,7 +2004,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Create classo instance and change parameters "
    ]
@@ -1976,7 +2018,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:52.959013Z",
      "start_time": "2020-12-09T22:32:52.943796Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1989,14 +2032,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Cross validation and Path Computation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Computation "
    ]
@@ -2008,7 +2055,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:32:52.973008Z",
      "start_time": "2020-12-09T22:32:52.963849Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2057,7 +2105,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:53.738722Z",
      "start_time": "2020-12-09T22:32:52.977675Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2071,7 +2120,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:53.776023Z",
      "start_time": "2020-12-09T22:40:53.759737Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2086,7 +2136,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:53.801467Z",
      "start_time": "2020-12-09T22:40:53.779748Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2112,6 +2163,7 @@
      "end_time": "2020-12-09T22:40:55.198012Z",
      "start_time": "2020-12-09T22:40:53.808031Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -2179,7 +2231,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:55.686283Z",
      "start_time": "2020-12-09T22:40:55.201857Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2206,7 +2259,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:55.704962Z",
      "start_time": "2020-12-09T22:40:55.691973Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2231,6 +2285,7 @@
      "end_time": "2020-12-09T22:40:55.721315Z",
      "start_time": "2020-12-09T22:40:55.709761Z"
     },
+    "hidden": true,
     "run_control": {
      "marked": false
     }
@@ -2256,7 +2311,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Prediction plot"
    ]
@@ -2268,7 +2325,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:55.754610Z",
      "start_time": "2020-12-09T22:40:55.727250Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2283,7 +2341,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:56.055370Z",
      "start_time": "2020-12-09T22:40:55.757276Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2309,14 +2368,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Stability Selection"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Computation "
    ]
@@ -2328,7 +2391,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:40:56.068373Z",
      "start_time": "2020-12-09T22:40:56.059304Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2372,7 +2436,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:51:57.731997Z",
      "start_time": "2020-12-09T22:40:56.072030Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2394,7 +2459,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:51:57.772600Z",
      "start_time": "2020-12-09T22:51:57.747402Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2409,7 +2475,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:51:59.001164Z",
      "start_time": "2020-12-09T22:51:57.781213Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2462,6 +2529,7 @@
      "end_time": "2020-12-09T22:51:59.015469Z",
      "start_time": "2020-12-09T22:51:59.006413Z"
     },
+    "hidden": true,
     "run_control": {
      "marked": false
     }
@@ -2487,7 +2555,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Prediction plot"
    ]
@@ -2499,7 +2569,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:51:59.040809Z",
      "start_time": "2020-12-09T22:51:59.019413Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2514,7 +2585,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-09T22:51:59.690524Z",
      "start_time": "2020-12-09T22:51:59.044079Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
