--- a/docs/source/auto_examples/plot_Tara_example.ipynb
+++ b/docs/source/auto_examples/plot_Tara_example.ipynb
@@ -80,7 +80,7 @@
       },
       "outputs": [],
       "source": [
-        "pseudo_count = 1\nX = np.log(pseudo_count+x)\nnleaves = np.sum(A,axis = 0)\nlogGeom = X.dot(A)/nleaves"
+        "pseudo_count = 1\nX = np.log(pseudo_count+x)\nnleaves = np.sum(A,axis = 0)\nlogGeom = X.dot(A)/nleaves\n\nraise ValueError(\"Do not compute it now\")"
       ]
     },
     {
