--- a/docs/source/auto_examples/plot_combo_example.ipynb
+++ b/docs/source/auto_examples/plot_combo_example.ipynb
@@ -116,7 +116,7 @@
       },
       "outputs": [],
       "source": [
-        "problem = classo_problem(X, y, C)"
+        "problem = classo_problem(X, y, C, label = label)"
       ]
     },
     {
