--- a/docs/source/auto_examples/plot_pH_example.ipynb
+++ b/docs/source/auto_examples/plot_pH_example.ipynb
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "from classo import classo_problem\nimport numpy as np\nfrom copy import deepcopy as dc\nimport scipy.io as sio"
+        "from classo import classo_problem\n\nimport qiime2\nimport pandas as pd\nimport numpy as np"
       ]
     },
     {
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "pH = sio.loadmat(\"pH_data/pHData.mat\")\ntax = sio.loadmat(\"pH_data/taxTablepHData.mat\")[\"None\"][0]\n\nX, Y_uncent = pH[\"X\"], pH[\"Y\"].T[0]\ny = Y_uncent - np.mean(Y_uncent)  # Center Y\nprint(X.shape)"
+        "table_art = qiime2.Artifact.load('pH_data/news/88soils_balances.qza')\ntable = table_art.view(pd.DataFrame)\nmetadata = pd.read_table('pH_data/originals/88soils_modified_metadata.txt', index_col=0)\nlabel = list(table.index)\n\n\nX = np.array(table)\ny_uncent = metadata[\"ph\"].values\ny = Y_uncent - np.mean(Y_uncent)  # Center Y\nprint(X.shape)\nprint(y.shape)"
       ]
     },
     {
@@ -62,7 +62,7 @@
       },
       "outputs": [],
       "source": [
-        "problem = classo_problem(X, y) \n\nproblem.model_selection.StabSelparameters.method      = 'lam'\nproblem.model_selection.PATH = True\nproblem.model_selection.LAMfixed = True\nproblem.model_selection.PATHparameters.n_active = X.shape[1] + 1"
+        "problem = classo_problem(X, y, label = label) \n\nproblem.model_selection.StabSelparameters.method      = 'lam'\nproblem.model_selection.PATH = True\nproblem.model_selection.LAMfixed = True\nproblem.model_selection.PATHparameters.n_active = X.shape[1] + 1"
       ]
     },
     {
