--- a/examples/example-notebook.ipynb
+++ b/examples/example-notebook.ipynb
@@ -1010,8 +1010,8 @@
    ],
    "source": [
     "path = path_figure + 'examplepH/'\n",
-    "pH = sio.loadmat('pH_data/pHData.mat')\n",
-    "tax = sio.loadmat('pH_data/taxTablepHData.mat')\n",
+    "pH = sio.loadmat('pH_data/matlab/pHData.mat')\n",
+    "tax = sio.loadmat('pH_data/matlab/taxTablepHData.mat')\n",
     "\n",
     "X, Y_uncent = pH['X'], pH['Y'].T[0]\n",
     "y = Y_uncent - np.mean(Y_uncent) # Center Y\n",
@@ -2627,7 +2627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
