--- a/examples/pH_data/qiime2/read data.ipynb
+++ b/examples/pH_data/qiime2/read data.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:15.592522Z",
-     "start_time": "2020-12-14T18:07:14.295268Z"
+     "end_time": "2020-12-14T18:59:53.916880Z",
+     "start_time": "2020-12-14T18:59:52.523503Z"
     }
    },
    "outputs": [],
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:15.633173Z",
-     "start_time": "2020-12-14T18:07:15.595815Z"
+     "end_time": "2020-12-14T18:59:53.948936Z",
+     "start_time": "2020-12-14T18:59:53.920509Z"
     }
    },
    "outputs": [],
@@ -35,8 +35,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:15.739628Z",
-     "start_time": "2020-12-14T18:07:15.636960Z"
+     "end_time": "2020-12-14T18:59:54.042479Z",
+     "start_time": "2020-12-14T18:59:53.957046Z"
     }
    },
    "outputs": [
@@ -508,8 +508,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:15.751313Z",
-     "start_time": "2020-12-14T18:07:15.743285Z"
+     "end_time": "2020-12-14T18:59:54.054891Z",
+     "start_time": "2020-12-14T18:59:54.045947Z"
     }
    },
    "outputs": [
@@ -534,8 +534,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:35.726656Z",
-     "start_time": "2020-12-14T18:07:15.754303Z"
+     "end_time": "2020-12-14T19:00:24.620542Z",
+     "start_time": "2020-12-14T18:59:54.064530Z"
     }
    },
    "outputs": [
@@ -566,8 +566,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:42.402713Z",
-     "start_time": "2020-12-14T18:07:35.729996Z"
+     "end_time": "2020-12-14T19:00:31.124280Z",
+     "start_time": "2020-12-14T19:00:24.625851Z"
     }
    },
    "outputs": [],
@@ -582,8 +582,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:42.502820Z",
-     "start_time": "2020-12-14T18:07:42.407523Z"
+     "end_time": "2020-12-14T19:00:31.187473Z",
+     "start_time": "2020-12-14T19:00:31.127657Z"
     },
     "scrolled": true
    },
@@ -959,8 +959,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:07:58.922384Z",
-     "start_time": "2020-12-14T18:07:42.506296Z"
+     "end_time": "2020-12-14T19:00:40.418369Z",
+     "start_time": "2020-12-14T19:00:31.189770Z"
     }
    },
    "outputs": [
@@ -985,8 +985,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:08:39.458714Z",
-     "start_time": "2020-12-14T18:07:58.926629Z"
+     "end_time": "2020-12-14T19:01:18.637989Z",
+     "start_time": "2020-12-14T19:00:40.422304Z"
     }
    },
    "outputs": [
@@ -1025,8 +1025,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:08:39.547787Z",
-     "start_time": "2020-12-14T18:08:39.462912Z"
+     "end_time": "2020-12-14T19:01:18.704761Z",
+     "start_time": "2020-12-14T19:01:18.641399Z"
     }
    },
    "outputs": [],
@@ -1041,8 +1041,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:08:39.648096Z",
-     "start_time": "2020-12-14T18:08:39.557131Z"
+     "end_time": "2020-12-14T19:01:18.752808Z",
+     "start_time": "2020-12-14T19:01:18.707009Z"
     }
    },
    "outputs": [
@@ -1443,8 +1443,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:08:39.665336Z",
-     "start_time": "2020-12-14T18:08:39.653085Z"
+     "end_time": "2020-12-14T19:01:18.764117Z",
+     "start_time": "2020-12-14T19:01:18.755782Z"
     }
    },
    "outputs": [
@@ -1469,11 +1469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:09:36.394460Z",
-     "start_time": "2020-12-14T18:09:36.364583Z"
+     "end_time": "2020-12-14T19:01:18.800529Z",
+     "start_time": "2020-12-14T19:01:18.766635Z"
     }
    },
    "outputs": [],
@@ -1483,11 +1483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:09:39.802163Z",
-     "start_time": "2020-12-14T18:09:39.783339Z"
+     "end_time": "2020-12-14T19:01:18.816490Z",
+     "start_time": "2020-12-14T19:01:18.802777Z"
     }
    },
    "outputs": [
@@ -1587,7 +1587,7 @@
        "[7396 rows x 1 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,11 +1598,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-14T18:15:16.776860Z",
-     "start_time": "2020-12-14T18:15:16.767653Z"
+     "end_time": "2020-12-14T19:01:18.829551Z",
+     "start_time": "2020-12-14T19:01:18.820004Z"
     }
    },
    "outputs": [
@@ -1616,7 +1616,7 @@
        "      dtype='object', length=118)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,10 +1627,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-14T19:01:38.669784Z",
+     "start_time": "2020-12-14T19:01:38.613225Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "table.to_csv('news/table.csv')"
+   ]
   }
  ],
  "metadata": {
